welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:15: error: ';' expected but ',' found.
			setPos(getX()+1),(getY()+getMondeHauteur()-1)
                                        ^